Examples: Added missing configuration option for LayeredEthernetInterfaces in hosts.

--- a/examples/ethernet/cutthrough/omnetpp.ini
+++ b/examples/ethernet/cutthrough/omnetpp.ini
@@ -5,6 +5,7 @@ network = EthernetCutthroughExample
 *.switch*.relayUnit.typename = "MacRelayUnit"
 *.switch*.eth[*].typename = "EthernetCutthroughInterface"
 *.host*.eth[*].typename = "LayeredEthernetInterface"
+*.host*.eth[*].phyLayer.typename = "EthernetStreamingPhyLayer"
 *.*.eth[*].bitrate = 100Mbps
 
 *.host*.numApps = 1
