Examples: Followed recent change with making the ethernet submodule optional in the layered Ethernet examples.

--- a/examples/ethernet/cutthrough/omnetpp.ini
+++ b/examples/ethernet/cutthrough/omnetpp.ini
@@ -1,6 +1,7 @@
 [General]
 network = EthernetCutthroughExample
 
+*.*.ethernet.typename = "SimpleEthernetLayer"
 *.switch*.enableCutthrough = true
 *.switch*.relayUnit.typename = "MacRelayUnit"
 *.switch*.eth[*].typename = "EthernetCutthroughInterface"
