--- a/examples/ethernet/gatepreemption/omnetpp.ini
+++ b/examples/ethernet/gatepreemption/omnetpp.ini
@@ -5,6 +5,8 @@ measurement-label = ${highTsOperation}
 
 *.highTsOperation = ${highTsOperation = "correct", "faulty"}
 
+*.*.ethernet.typename = "SimpleEthernetLayer"
+
 **.crcMode = "computed"
 **.fcsMode = "computed"
 
