--- a/examples/ethernet/preemption/omnetpp.ini
+++ b/examples/ethernet/preemption/omnetpp.ini
@@ -1,6 +1,8 @@
 [General]
 network = EthernetPreemptionExample
 
+*.*.ethernet.typename = "SimpleEthernetLayer"
+
 **.crcMode = "computed"
 **.fcsMode = "computed"
 
